# CTraj

./: .gitignore  .gitmodules  CMakeLists.txt  CTrajConfig.cmake.in  build_thirdparty.sh  config.cmake.in  ctrajConfig.cmake.in  readme.md
docs/: note.tex
output/: measurements.json  simu_wave_motion.json
script/: marg_drawer.py  plt_utils.py  traj_drawer.py
script/nofree/marg/: drawer.py  helper.py
src/: CMakeLists.txt  main.cpp
src/include/ctraj/core/: imu.h  pose.hpp  preintegration.h  simu_trajectory.h  spline_bundle.h  trajectory.h  trajectory_estimator.h
src/include/ctraj/factor/: centralization_factor.hpp  imu_acce_factor.hpp  imu_gyro_factor.hpp  marginalization_factor.h  multi_imu_acce_factor.hpp  multi_imu_gyro_factor.hpp  pos_factor.hpp  se3_factor.hpp  so3_factor.hpp
src/include/ctraj/factors/: centralization_factor.hpp  functor_typedef.hpp  imu_acce_factor.hpp  imu_gyro_factor.hpp  marginalization_factor.h  multi_imu_acce_factor.hpp  multi_imu_gyro_factor.hpp  pos_factor.hpp  pos_functor.hpp  se3_factor.hpp  se3_functor.hpp  so3_factor.hpp  so3_functor.hpp  vins_marginalization_factor.h
src/include/ctraj/nofree/: marg_test.hpp
src/include/ctraj/spline/: calib_bias.hpp  ceres_spline_helper.h  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_common.h  spline_segment.h
src/include/ctraj/utils/: assert.h  eigen_utils.hpp  macros.hpp  sophus_utils.hpp  utils.hpp
src/include/ctraj/view/: traj_viewer.h
src/src/core/: imu.cpp  pose.cpp  preintegration.cpp
src/src/factor/: marginalization_factor.cpp  vins_marginalization_factor.cpp
src/src/view/: traj_viewer.cpp
